# sdl2-minesweeper

./: Cargo.toml  LICENSE  README.md  output.txt  tiles-sketch.aseprite  tiles.aseprite
src/: audio.rs  display.rs  field.rs  interface.rs  layout.rs  main.rs  particles.rs  sfx.rs  shaders.rs  state.rs  textures.rs
src/shaders/: Makefile  rect.frag  rect.frag.spv  rect.vert  rect.vert.spv
