[package]
name = "wgpu-minesweeper"
version = "0.1.0"
authors = ["Delta-Psi <delta.psi00@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = "0.6.0"
rand = "0.7.3"
futures = "0.3.6"
bytemuck = {version = "1.4.1", features = ["derive"]}
png = "0.16.7"
sdl2 = {version = "0.34.3", features = ["raw-window-handle"]}
